--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "isomorphic-dompurify": "^2.28.0",
-    "lucide-react": "^0.542.0",
-    "next": "14.2.18",
+    "lucide-react": "^0.544.0",
+    "next": "^14.2.32",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.62.0",
@@ -67,9 +67,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^14.3.1",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^20",
+    "@types/node": "^24.5.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "eslint": "^8.57.0",
